--- a/composer.json
+++ b/composer.json
@@ -24,12 +24,15 @@
     "require": {
         "php": "^7.4 || ^8.0",
         "ext-json": "*",
+        "guzzlehttp/guzzle": "^7.9",
         "monolog/monolog": "^2.8",
         "php-di/php-di": "^6.4",
+        "respect/validation": "^2.3",
         "robmorgan/phinx": "^0.16.5",
         "slim/psr7": "^1.5",
         "slim/slim": "^4.10",
-        "slim/twig-view": "^3.4"
+        "slim/twig-view": "^3.4",
+        "vlucas/phpdotenv": "^5.6"
     },
     "require-dev": {
         "jangregor/phpstan-prophecy": "^1.0.0",
