--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,11 @@ services:
       - "8000:80"
     volumes:
       - .:/var/www/html
+    command: bash -c "./init.sh && apache2-foreground"
     environment:
       - APP_ENV=development
+    networks:
+      - app-network
   db:
     image: mysql:8
     environment:
@@ -16,3 +19,7 @@ services:
       MYSQL_DATABASE: leads_db
     ports:
       - "3306:3306"
+    networks:
+      - app-network
+networks:
+  app-network:
